Complete overhaul of server card playing logic
These changes are aimed to reduce the number of specially handled cases. Playing cards, banking, and discarding now go through one pipeline. Additionally, card buttons have been overhauled, again.